# percolator-stake

./: .gitignore  Cargo.toml  README.md
.cargo/: audit.toml
.github/: pull_request_template.md
.github/workflows/: audit.yml  ci.yml  kani-manual.yml  upgrade-authority-gate.yml
docs/: ARCHITECTURE.md
kani-proofs/src/: lib.rs
scripts/: check-upgrade-authority.sh
src/: cpi.rs  error.rs  instruction.rs  lib.rs  math.rs  processor.rs  spl_token.rs  state.rs
tests/: cpi_tags.rs  error_codes.rs  integration.rs  kani.rs  poc_cooldown_timelock_hwm_overlap.rs  poc_hwm_flush_freeze.rs  poc_issue198_flush_available_underflow.rs  poc_jit_fee_snipe.rs  poc_mode1_fee_withdraw_underflow.rs  poc_recover_flushed_insurance_undercounts_realized_junior_loss.rs  poc_senior_deposit_loss_snipe.rs  proptest_extended.rs  proptest_math.rs  regression_184_set_market_resolved_undersized.rs  struct_layout.rs  unit.rs  v16_stake_insurance_e2e.rs  v17_stake_insurance_e2e.rs
