[package]
name = "percolator-stake"
version = "0.2.0"
edition = "2021"
description = "PDA-admin insurance LP staking program for Percolator"

[features]
no-entrypoint = []
test = []
kani = []

[dependencies]
solana-program = "=2.2.1"
pinocchio-token = "0.5.0"
bytemuck = { version = "1.14", features = ["derive"] }
# Pin blake3 to avoid edition2024 (SBF platform-tools has Rust 1.84)
blake3 = ">=1.5.0, <1.8.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-sdk = "=2.2.1"

# solana-program-test is too heavy for CI — use only for integration tests
# solana-program-test = "2.1"
proptest = "1.4"

# Pin crates that use edition2024 manifests (incompatible with cargo-build-sbf's cargo 1.79)
[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }
